# Scalar-openenv-hackathon

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements-space.txt  requirements.txt
egocentric_dataset_test/: __init__.py
egocentric_dataset_test/competition/: __init__.py  demo.py  environment.py  real_preview.py  s3_rl_bridge.py  server.py  shards.py  surrogate_backend.py  tasks.py
openenv_cli/: cli_utils.py
openenv_types/: __init__.py  actions.py  arc.py  egocentric.py  environment.py  records.py  training.py
scripts/: upload_space_real_preview.py  validate-submission.sh
server/: app.py
tests/: test_competition_submission.py  test_perception_to_physics.py
utils/: perception_to_physics.py
